Fix improvement